--- a/index.ipynb
+++ b/index.ipynb
@@ -143,8 +143,7 @@
     }
    ],
    "source": [
-    "italy = italy.upper()  # 'Italy'\n",
-    "italy"
+    "top_country = italy\n"
    ]
   },
   {
