--- a/index.ipynb
+++ b/index.ipynb
@@ -130,7 +130,9 @@
    "execution_count": 5,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "countries[]"
+   ]
   },
   {
    "cell_type": "markdown",
