--- a/index.ipynb
+++ b/index.ipynb
@@ -171,22 +171,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'USA'"
+       "'Morocco'"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "mexico = countries[4]\n",
+    "mexico = countries[3]\n",
     "mexico"
    ]
   },
