Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -250,7 +250,7 @@
     }
    ],
    "source": [
-    "new_list_countries = countries.append(Malta)\n",
+    "countries.append(Malta)\n",
     "new_list_countries"
    ]
   },
