--- a/index.ipynb
+++ b/index.ipynb
@@ -238,7 +238,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "countries.append(\"Malta\")\n"
+    "countries.append(\"Malta\")\n",
+    "countries"
    ]
   },
   {
