--- a/index.ipynb
+++ b/index.ipynb
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -253,10 +253,11 @@
        " 'Canada',\n",
        " 'South Korea',\n",
        " 'Malta',\n",
+       " 'Malta',\n",
        " 'Malta']"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
