--- a/index.ipynb
+++ b/index.ipynb
@@ -459,7 +459,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "unique_countries = set(countries)"
+    "unique_countries = set(countries)\n",
+    "uni"
    ]
   },
   {
