Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -459,8 +459,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "unique_countries = set(countries)\n",
-    "uni"
+    "unique_countries = set(countries)"
    ]
   },
   {
