Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -461,7 +461,8 @@
    "source": [
     "unique_countries = set(countries)\n",
     "\n",
-    "countries"
+    "countries_2 = countries\n",
+    "countries.append"
    ]
   },
   {
