Automatically backed up by Learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -488,8 +488,7 @@
     "\n",
     "countries_2 = countries\n",
     "countries.append(\"x\")\n",
-    "countries_2\n",
-    "unique_countries"
+    "countries_2"
    ]
   },
   {
