Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -481,12 +481,7 @@
     }
    ],
    "source": [
-    "unique_countries = set(countries)\n",
-    "\n",
-    "countries_2 = countries\n",
-    "countries.append(\"x\")\n",
-    "countries_2\n",
-    "unique_countries"
+    "unique_countries = set(countries)\n"
    ]
   },
   {
