Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -486,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -502,10 +502,11 @@
        " 'Morocco',\n",
        " 'South Korea',\n",
        " 'Thailand',\n",
-       " 'USA'}"
+       " 'USA',\n",
+       " 'x'}"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
