Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -481,7 +481,8 @@
     }
    ],
    "source": [
-    "unique_countries = set(countries)\n"
+    "unique_countries = set(countries)\n",
+    "countries.pop()"
    ]
   },
   {
