--- a/index.ipynb
+++ b/index.ipynb
@@ -455,22 +455,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Thailand'"
+       "'Malta'"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#unique_countries = set(countries)\n",
+    "unique_countries = set(countries)\n",
     "countries.pop()"
    ]
   },
