--- a/index.ipynb
+++ b/index.ipynb
@@ -455,28 +455,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 44,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'Malta'"
-      ]
-     },
-     "execution_count": 43,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "unique_countries = set(countries)\n",
-    "countries.pop()"
+    "unique_countries = set(countries)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -487,16 +475,13 @@
        " 'Croatia',\n",
        " 'Finland',\n",
        " 'Italy',\n",
-       " 'Malta',\n",
        " 'Mexico',\n",
        " 'Morocco',\n",
        " 'South Korea',\n",
-       " 'Thailand',\n",
-       " 'USA',\n",
-       " 'x'}"
+       " 'USA'}"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
