--- a/index.ipynb
+++ b/index.ipynb
@@ -459,7 +459,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "unique_countries = set(countries)"
+    "countries.append(\"Sourh K\")"
    ]
   },
   {
