Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -455,11 +455,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
-    "countries.append(\"Malta\")"
+    "countries.append(\"Thailand\")"
    ]
   },
   {
