--- a/index.ipynb
+++ b/index.ipynb
@@ -464,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -475,13 +475,15 @@
        " 'Croatia',\n",
        " 'Finland',\n",
        " 'Italy',\n",
+       " 'Malta',\n",
        " 'Mexico',\n",
        " 'Morocco',\n",
        " 'South Korea',\n",
+       " 'Thailand',\n",
        " 'USA'}"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
