--- a/index.ipynb
+++ b/index.ipynb
@@ -506,6 +506,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "len(cou)\n",
+    "\n",
     "num_of_repeats = None\n",
     "num_of_repeats # 3"
    ]
