--- a/index.ipynb
+++ b/index.ipynb
@@ -502,11 +502,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
-    "len(cou)\n",
+    "len(countries)\n",
     "\n",
     "num_of_repeats = None\n",
     "num_of_repeats # 3"
