Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -502,14 +502,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 55,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "14"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "len(countries)\n",
-    "\n",
-    "num_of_repeats = None\n",
-    "num_of_repeats # 3"
+    "len(countries)"
    ]
   },
   {
