Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -502,23 +502,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "14"
+       "11"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "len(countries)\n",
-    "len(u)"
+    "len(unique_countries)"
    ]
   },
   {
