--- a/index.ipynb
+++ b/index.ipynb
@@ -518,7 +518,8 @@
    ],
    "source": [
     "len(countries)\n",
-    "len(unique_countries)"
+    "len(unique_countries)\n",
+    "len(unique_counti)"
    ]
   },
   {
