--- a/index.ipynb
+++ b/index.ipynb
@@ -519,7 +519,7 @@
    "source": [
     "len(countries)\n",
     "len(unique_countries)\n",
-    "len(unique_counti)"
+    "len(unique_countries) - len(cpun)"
    ]
   },
   {
