Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -519,7 +519,7 @@
    "source": [
     "len(countries)\n",
     "len(unique_countries)\n",
-    "len(unique_countries) - len(countries) = number_"
+    "len(unique_countries) - len(countries) = number_of_repeats\n"
    ]
   },
   {
