Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -502,16 +502,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "11"
+       "-3"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -520,7 +520,7 @@
     "len(countries)\n",
     "len(unique_countries)\n",
     "number_of_repeats = len(unique_countries) - len(countries)\n",
-    "number_of "
+    "number_of_repeats"
    ]
   },
   {
